# CodeMeter

./: .clang-format  .gitignore  CMakeLists.txt  CodeMeter.sln  README.md  codemeter.c  codemeter.h  tests.c
CodeMeter/: CodeMeter.vcxproj  CodeMeter.vcxproj.filters  codemeter.c
docs/: CodeMeter.docx
src/: codemeter.h  main.c  revision.c
